# TerrainEngine

./: .gitignore  CMakeLists.txt  readme.md
resource/shader/: frame_default.frag  terrain.frag  terrain.vert  terrain_page_table.frag  terrain_rvt.frag
resource/shader/generative/: pnoise.frag
resource/shader/shadow/: shadow_mapping_depth.geom  shadow_mapping_depth.vert
resource/shader/terrain/: terrain_geometry.frag  terrain_geometry.vert  terrain_page_table.vert  terrain_rvt.frag  terrain_rvt.vert  terrain_rvt_coarse.frag
resource/shader/water/: water.frag  water.vert
resource/texture/: cliffvolcanic_n.tif
resource/texture/terrain/: bark_soil_a.DDS  forest_a.DDS  grass_dried_a.DDS  grass_dried_n.DDS  grass_lawn_a.DDS  grass_lawn_n.DDS  grass_soil_n.DDS  grass_uncut_n.DDS  grass_wild_a.DDS  grass_wild_n.DDS  rock_cliff_a.DDS  rock_cliff_n.DDS  rock_cliff_n_.DDS  sand_beach_n.DDS  sand_debris_a.DDS  sand_debris_n.DDS  soil_rock_a.DDS
resource/texture/terrain_new/: bark_soil_a.DDS  bark_soil_n.DDS  grass_lawn_a.DDS  grass_lawn_n.DDS  rock_cliff_a_.DDS  rock_cliff_n.DDS  sand_beach_a.DDS  wild_grass_a.DDS  wild_grass_n.DDS
src/app/: cameractrl.cpp  cameractrl.h  main.cpp
src/engine/config/: config.h
src/engine/core/: core.cpp  core.h  pch.h
src/engine/filesystem/: filesystem.cpp  filesystem.h  texture2d.cpp  texture2d.h
src/engine/graphics/: camera.cpp  camera.h  frame.cpp  frame.h  rendering.h  shader.cpp  shader.h
src/engine/image/: image_gen.cpp  image_gen.h
src/engine/io/: input.cpp  input.h
src/engine/math/: transform.cpp  (+1 more)
src/garbage/: heightmap.cpp  heightmap.h  heightmap_data.cpp  page_table_manager.cpp  page_table_manager.h  terrain.vert  terrain_config.h  terrain_render.h
(+65 files in other folders)
